trying to fix image squishyness

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
 html {
   scroll-behavior: smooth;
 }
+.carousel-inner > .item > img {
+  width:640px;
+  height:360px;
+}
